[package]
name = "sift_stream"
version = { workspace = true }
description = "A robust Sift telemetry streaming library"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[package.metadata.docs.rs]
features = ["metrics-unstable"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-channel = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true, optional = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sift_connect = { workspace = true }
sift_error = { workspace = true }
sift_rs = { workspace = true }
sift_pbfs = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "fs"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:bytesize"]
metrics-unstable = ["dep:serde", "dep:serde_json", "dep:hyper", "dep:hyper-util"]
unstable = []

[dev-dependencies]
async-trait = { workspace = true }
criterion = { workspace = true }
dotenvy = { workspace = true }
hyper-util = { workspace = true }
rand = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "signal"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
uuid = {workspace = true }

[[bench]]
name = "message_to_ingest_req"
harness = false
required-features = ["unstable"]

[[example]]
name = "backups-only"
path = "examples/backups-only/main.rs"

[[example]]
name = "quick-start"
path = "examples/quick-start/main.rs"

[[example]]
name = "direct-metrics"
path = "examples/metrics/direct_metrics.rs"
required-features = ["metrics-unstable"]

[[example]]
name = "http-server-metrics"
path = "examples/metrics/http_server.rs"
required-features = ["metrics-unstable"]
