[package]
name = "sift-stream-bindings"
version = "0.2.0-rc.8"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[lib]
name = "sift_stream_bindings"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
pyo3 = { version = "0.25.0" }
pyo3-stub-gen = { version = "0.10.0" }
sift_rs = { workspace = true }
sift_stream = { workspace = true, features = ["metrics-unstable"] }
sift_error = { workspace = true }
tokio = { version = "1.43.0", features = ["rt", "sync", "time", "macros"] }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pbjson-types = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
