[package]
name = "sift_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.79"
dotenv = "0.15.0"
prost = "0.12.4"
prost-types = "0.12.4"
serde = "1.0.203"
serde_json = "1.0.117"
sift = { git = "https://github.com/sift-stack/sift", version = "0.1.0" }
thiserror = "1.0.58"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots", "tls-webpki-roots"] }
